[package]
name = "market"
version = "0.1.0"
authors = ["Coder-RG <36698583+Coder-RG@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = { version = "1.4.0" }
cw-controllers = "1.1.0"
cw-storage-plus = "1.2.0"
cw1 = { path = "../../packages/cw1" }
cw2 = { path = "../../packages/cw2" }
schemars = "0.8.15"
serde = { version = "1.0.202", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
cw20-base = { path = "../cw20-base" }
cw20 = { path = "../../packages/cw20" }
cw721-base = { path = "../cw721-base" }
cw721 = { path = "../../packages/cw721" }
cw721-metadata-onchain = { path = "../cw721-metadata-onchain" }

[dev-dependencies]
cw-multi-test = "0.16.5"
